# POGL

./: .gitignore  CMakeLists.txt  README.md  parallaxMapping.vs
include/: camera.hh  matrix4.hh  mesh.hh  program.hh  shadow_map.hh  skybox.hh  texture.hh  utils.hh  vec4.hh  wind.hh
shaders/: compute_cloth.glsl  compute_collision.glsl  compute_gravity.glsl  compute_neighbour.glsl  compute_normal.glsl  cubeShadowMap.fs  cubeShadowMap.gs  cubeShadowMap.vs  depthmap.fs  depthmap.vs  despmap.fs  despmap.vs  do_nothing.glsl  do_nothing_relief.glsl  first.fs  first.vs  flat.fs  flat.vs  normalmap.fs  normalmap.vs  normals.fs  normals.vs  normals_cubeshadows.fs  normals_cubeshadows.vs  normals_dirshadows.fs  normals_dirshadows.vs  normals_dirshadows_quads.fs  old_parallaxMapping.fs  parallaxMapping.fs  parallaxMapping.vs  reliefMapping.fs  reliefMapping_quads.fs  shadow_checker.fs  shadow_checker.vs
src/: camera.cc  first.fs  main.cc  matrix4.cc  mesh.cc  program.cc  shadow_map.cc  skybox.cc  texture.cc  utils.cc  vec4.cc  wind.cc
